@@ -18,7 +18,6 @@ import static com.google.common.base.Preconditions.checkNotNull;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.tuweni.bytes.Bytes32;
 import tech.pegasys.teku.api.schema.Attestation;
 import tech.pegasys.teku.api.schema.AttesterSlashing;
@@ -94,14 +93,12 @@ public class BlindedBeaconBlockBodyDeneb extends BeaconBlockBodyAltair {
     this.executionPayloadHeader =
         new ExecutionPayloadHeaderDeneb(blockBody.getExecutionPayloadHeader());
     this.blsToExecutionChanges =
-        blockBody.getBlsToExecutionChanges().stream()
-            .map(SignedBlsToExecutionChange::new)
-            .collect(Collectors.toList());
+        blockBody.getBlsToExecutionChanges().stream().map(SignedBlsToExecutionChange::new).toList();
     this.blobKZGCommitments =
         blockBody.getBlobKzgCommitments().stream()
             .map(SszKZGCommitment::getKZGCommitment)
             .map(KZGCommitment::new)
-            .collect(Collectors.toList());
+            .toList();
   }
 
   @Override
